--- a/metadata.desktop
+++ b/metadata.desktop
@@ -14,8 +14,8 @@ X-KDE-PluginInfo-Author=DhabyX
 X-KDE-PluginInfo-Email=slack.dhabyx@gmail.com
 X-KDE-PluginInfo-Website=http://plasma.kde.org/
 X-KDE-PluginInfo-Category=System Information
-X-KDE-PluginInfo-Name=simpleMonitor
-X-KDE-PluginInfo-Version=0.5
+X-KDE-PluginInfo-Name=cl.texla.simpleMonitor
+X-KDE-PluginInfo-Version=2.0
 
 X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-License=GPL
